--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=backendProyectoParqueo
+
+# PostgreSQL config
+spring.datasource.url=jdbc:postgresql://localhost:5432/parqueo_db
+spring.datasource.username=postgres
+spring.datasource.password=8776959
+
+# JPA config
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
