config: use enviroment variables in project with spring boot

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,12 @@
 spring.application.name=backendProyectoParqueo
 
+# Enviroment variables
+spring.config.import=optional:file:.env[.properties]
+
 # PostgreSQL config
-spring.datasource.url=jdbc:postgresql://localhost:5432/parqueo_db
-spring.datasource.username=postgres
-spring.datasource.password=8776959
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 
 # JPA config
 spring.jpa.hibernate.ddl-auto=update
