create: cotroller model and repositopry of tarifas

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=backendProyectoParqueo
 # PostgreSQL config
 spring.datasource.url=jdbc:postgresql://localhost:5432/parqueo_db
 spring.datasource.username=postgres
-spring.datasource.password=8776959
+spring.datasource.password=nahuel
 
 # JPA config
 spring.jpa.hibernate.ddl-auto=update
