--- a/DockerFile
+++ b/DockerFile
@@ -1,8 +1,12 @@
+# Build stage
 FROM maven:3.8.5-openjdk-17 AS build
+WORKDIR /app
 COPY . .
 RUN mvn clean package -DskipTests
 
+# Run stage
 FROM openjdk:17.0.1-jdk-slim
-COPY --from=build /target/demo-0.0.1-SNAPSHOT.jar demo.jar
+WORKDIR /app
+COPY --from=build /app/target/*.jar app.jar
 EXPOSE 8080
-ENTRYPOINT [ "java", "-jar", "demo.jar" ]
+ENTRYPOINT ["java", "-jar", "app.jar"]
