--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,9 @@ spring.application.name=backendProyectoParqueo
 spring.config.import=optional:file:.env[.properties]
 
 # PostgreSQL config
-spring.datasource.url=${DB_URL}
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
+spring.datasource.url=jdbc:postgresql://localhost:5432/parqueo_db
+spring.datasource.username=postgres
+spring.datasource.password=8776959
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA config
