--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,7 @@ server.port=8080
 server.error.include-message=always
 server.error.include-binding-errors=always
 server.servlet.context-path=/api/
+
+# Zona Horaria
+spring.jackson.time-zone=America/La_Paz
+spring.jpa.properties.hibernate.jdbc.time_zone=America/La_Paz
