--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,9 @@ server.servlet.context-path=/api/
 # Zona Horaria
 spring.jackson.time-zone=America/La_Paz
 spring.jpa.properties.hibernate.jdbc.time_zone=America/La_Paz
+
+# Security configuration
+app.security.jwt.keystore-location=jwt-keystore.jks
+app.security.jwt.keystore-password=aladinos
+app.security.jwt.key-alias=jwt-sign-key
+app.security.jwt.private-key-passphrase=aladinos
