feat: add entrypoint to keygen

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,6 +26,6 @@ spring.jpa.properties.hibernate.jdbc.time_zone=America/La_Paz
 
 # Security configuration
 app.security.jwt.keystore-location=jwt-keystore.jks
-app.security.jwt.keystore-password=aladinos
+app.security.jwt.keystore-password=${STORE_PASS}
 app.security.jwt.key-alias=jwt-sign-key
-app.security.jwt.private-key-passphrase=aladinos
+app.security.jwt.private-key-passphrase=${KEY_PASS}
