--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,7 +25,4 @@ spring.jackson.time-zone=America/La_Paz
 spring.jpa.properties.hibernate.jdbc.time_zone=America/La_Paz
 
 # Security configuration
-app.security.jwt.keystore-location=jwt-keystore.jks
-app.security.jwt.keystore-password=${STORE_PASS}
-app.security.jwt.key-alias=jwt-sign-key
-app.security.jwt.private-key-passphrase=${KEY_PASS}
+jwt.secret=${SECRET_KEY}
