--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,13 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+
         <!-- Spring Boot Auth -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
